# tyro-strict

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml
src/tyro_strict/: strict_cli.py
tests/: test_model_validation_error.py  test_strict_cli.py
