[tool.poetry]
name = "tyro-strict"
version = "0.1.0"
description = ""
authors = ["Sander Teunissen <s.teunissen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tyro = ">=0.5.7"
pydantic = ">=2"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2"
mypy = ">=1.5.1"
ruff = ">=0.0.287"
colorama = ">=0.4.6"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
